spacing fix

--- a/style.css
+++ b/style.css
@@ -1541,7 +1541,7 @@ footer span {
     margin-right: auto;
   }
   .splash-bg.index .about .me {
-    margin: 0 0 18px 0;
+    margin: 0 0 16px 0;
     width: 150px;
   }
   .splash-bg.index .about .me img {
